[package]
name = "howlast"
version = "0.1.0"
edition = "2024"
description = "A procedural macro to easily misure computation times."
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/mad4j/howlast"
homepage = "https://github.com/mad4j/howlast"
documentation = "https://docs.rs/howlast"
keywords = ["procedural-macro", "rust", "code-generation", "macro", "struct"]
categories = ["development-tools"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }